postgress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  selector:
    matchLabels:
      app: postgres
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
          - args:
            - postgres
            - -c
            - shared_preload_libraries=pg_stat_statements
            - -c
            - pg_stat_statements.track=all
            image: postgres:12.2-alpine
            imagePullPolicy: "IfNotPresent"
            name: backend-postgres
            ports:
            - containerPort: 5432
            - containerPort: 8080
            resources:
                requests:
                  memory: "32Mi"
                  cpu: "100m"
                limits:
                  memory: "128Mi"
                  cpu: "500m"
            volumeMounts:
                - mountPath: /var/lib/postgresql/data
                  name: postgredb
      restartPolicy: Always
      volumes:
        - name: postgredb
          persistentVolumeClaim:
            claimName: postgres-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  labels:
    app: postgres
spec:
  type: NodePort
  selector:
    app: postgres
  ports:
  - port: 5432
    targetPort: 5432
